Fixed chart overflow issue

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,3 +2,8 @@
   display: block;
   height: 100%;
 }
+
+.chart-container {
+  width: 100%;
+  overflow: hidden;
+}
