--- a/src/app/shared/components/line-chart/line-chart.scss
+++ b/src/app/shared/components/line-chart/line-chart.scss
@@ -1,12 +1,3 @@
-:host {
-  display: block;
-  width: 100%;
-}
-
-.chart-container {
-  width: 100%;
-}
-
 ::ng-deep .custom-tooltip {
   background: #ffffff;
   border: 1px solid #e5e7eb;
